# poetry-codeartifact-plugin

./: README.md  pyproject.toml
poetry_codeartifact_plugin/: plugin.py
