[tool.poetry]
name = "poetry-codeartifact-plugin"
version = "1.0.3"
description = "A poetry plugin for keeping your CodeArtifact authorization token up-to-date"
authors = ["Tom Petr <tom@r2c.dev>"]
readme = "README.md"
packages = [{include = "poetry_codeartifact_plugin"}]

[tool.poetry.dependencies]
# Note: this is a plugin, and is installed inside an existing poetry setup.
# The versions here must match the minimum versions supported by the plugin.
python = "^3.8"
poetry = "^1.2.0"  # do not upgrade unless upstream upgrades
boto3 = "^1.24.57"  # do not upgrade unless upstream upgrades


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."poetry.plugin"]
poetry-codeartifact-plugin = "poetry_codeartifact_plugin.plugin:CodeArtifactPlugin"
